fix(cronjob): simplify secret reference in reminder-cronjob.yaml

--- a/k8s/reminder-cronjob.yaml
+++ b/k8s/reminder-cronjob.yaml
@@ -35,8 +35,7 @@ spec:
             command: ["/app/app"]
             args: ["reminder", "--config=/config/config.yaml"]
             envFrom:
-              - secretRef:
-                name: test-secret
+              - secretRef: test-secret
             env:
             # Database configuration
             # Reminder configuration
