--- a/kubernetes/secrets.encrypted.yaml
+++ b/kubernetes/secrets.encrypted.yaml
@@ -32,6 +32,8 @@ data:
     DELETEMESSAGES_PASS: ENC[AES256_GCM,data:AaWmz7ZrdgNMs765e3G/V4E7LXyeTubu,iv:XzCLEMPInrpfxkaRyWYLQqkmwGS78xjh45HmQSS42IY=,tag:3hWr/0QbY2ISrMt2RbbVKA==,type:str]
     DELETEMESSAGES_USER: ENC[AES256_GCM,data:ZsMaMmidGdzClXI+6YpL5Ttn+cI=,iv:u20k7MaNqDxAz2r0dBaYyfHP0oX3rmDcIHw6Llk+axQ=,tag:/ebDMpMYzh6hB5XQhUHMyg==,type:str]
     SLACK_SIGNING_SECRET: ENC[AES256_GCM,data:SYIF+J98BW+W8KbF8wo2fXXVmNZkEzkWRJ2WjnB3Sa/Kldp2fIt0yk4U04w=,iv:NVTAX85qs9Dgh7b2VLPfKxUX7Trx2HzN8g398zDo658=,tag:cU2Ley2b5aPh8lm3m7OT4g==,type:str]
+    IMAGES_KEY: ENC[AES256_GCM,data:SHoPZK3KOoXatJvbKOJC3/Ydcv/ySJPt6hoV2GXINQJsvdA6++NnCCSHHFo=,iv:QdO9Tpiy/niZ+JVGnA/PCLhNzGtJfGqz73CqkheP678=,tag:reeLm8+7CjQa+DgLAza1tw==,type:str]
+    IMAGES_ID: ENC[AES256_GCM,data:/d0ll9clNcDFL+EyKQgkISNnidi8qXKe7l7rB+jRVamXVXmL,iv:QOvx58AhQ2lPJOs9K5Il6U3/DiR2IVagg9ZrqhETy5A=,tag:uCCU8UGzoHqNRPPh+5vfiA==,type:str]
     #ENC[AES256_GCM,data:VASYAPIe9HgwUCZu2un4UfhGD3rLW2yWp1udWyKkmy09dPkPMjxUdWTcuVSrumMuBrjl6tF3rzRq4R/Ddu1MY301iPwhMJpazfPg0szLib2rnUFi22ry88sg4gqn,iv:CQU11ex7wjnGnmBDd7eNiOHtR5pxTEIq0fUq6KPejlw=,tag:3ERwW5AEq1fmP0J8HUAfdw==,type:comment]
     SLACK_CLIENT_ID: ENC[AES256_GCM,data:mqVmPlclrlG2AM7Bv2ffvdrCsj1OZ5I2GYwabHSkFq2qRmMC,iv:F3m0p/NUYetadI9P1h9rFYRx4e39iYmctj+i2UHWLfM=,tag:qKoHGWSvIUWCe4R4J0JS4w==,type:str]
     SLACK_CLIENT_SECRET: ENC[AES256_GCM,data:Wao+a7eZbmFynPBIn1UHNvv4c7c62x4b68JhBgZA0H0y3Jb/ljU066S0JtI=,iv:hFQfBu0WHK+PEFMh04qfqj9tV7NNxLXjkMMtx+DIvb0=,tag:e4nm1tChIORH9/iWioVG7w==,type:str]
@@ -45,8 +47,8 @@ sops:
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2025-05-24T18:40:57Z"
-    mac: ENC[AES256_GCM,data:WUJR2B/UzQGLUCz/f7vQYae9EWqJKtQmuKgbc+k3M1ipADdRoJkEqRR6QySzBs0EZKO/oW8dL9L4LsYSy5sruAcXMwGTxhXtV0V/eitKTBQL4IdmM7LdCUwZvxnBxddqrAUlE8Qx2nQLXVIUCm8C00eiqIXSODFzZfSwbCRe35w=,iv:BEkv8/wltpDVJWdL40rO1LXgbF0rnY4qWvZyNI+65bA=,tag:tYQPQrm8ml2oWGQJC2jKsQ==,type:str]
+    lastmodified: "2025-06-10T12:37:46Z"
+    mac: ENC[AES256_GCM,data:MXjwRS2wzdpFM1qH7DJkyFOYi+Z493tDBbecayrup8EhYD9wwoQGijT5ICHQO7eOkqqLRm8PhKxQFIlVZwUM/PRRFEQzBbNLOXDJVIeXjH6t5FIHoKtAzdM7hdDURlKRBlPUXnCw/pP0ctRMMl/BRXcAkIc/1C+bU+f+BKA3xyA=,iv:yWbSAo3V0CTFMImhA2UB0jCsUMjF+v+mp+/h88i7NiA=,tag:XhS3BVEzoqONNTD+h1m8vg==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.8.1
