feat(rabbitmq-operator): add node affinity and tolerations, increase storage size
Add node affinity rules and tolerations to schedule Pods on nodes labeled with 'stable=rabbit'. Increase the persistent storage size from 1Gi to 3Gi for improved capacity.

--- a/k8s/rabbitmq-operator.yaml
+++ b/k8s/rabbitmq-operator.yaml
@@ -9,11 +9,26 @@ metadata:
   namespace: default
 spec:
   replicas: 3
+  affinity:
+    nodeAffinity:
+      preferredDuringSchedulingIgnoredDuringExecution:
+      - weight: 100
+        preference:
+          matchExpressions:
+          - key: stable
+            operator: In
+            values:
+            - rabbit
+  tolerations:
+  - key: stable
+    operator: Equal
+    value: rabbit
+    effect: NoSchedule
   service:
     type: ClusterIP
   persistence:
     storageClassName: "standard-rwo"  # Use default storage class
-    storage: 1Gi
+    storage: 3Gi
   resources:
     requests:
       cpu: 100m
