--- a/k8s/rabbitmq-operator.yaml
+++ b/k8s/rabbitmq-operator.yaml
@@ -19,6 +19,17 @@ spec:
             operator: In
             values:
             - rabbit
+    podAntiAffinity:
+      preferredDuringSchedulingIgnoredDuringExecution:
+      - weight: 100
+        podAffinityTerm:
+          labelSelector:
+            matchExpressions:
+              - key: app.kubernetes.io/name
+                operator: In
+                values:
+                - rabbitmq
+          topologyKey: "kubernetes.io/hostname"
   tolerations:
   - key: stable
     operator: Equal
