feat(deployment): add pod anti-affinity rules to database, email, and password-exchange deployments
Added preferred pod anti-affinity settings to improve availability and performance by balancing pods across nodes. Included node affinity rules for password-exchange to prioritize worker nodes and amd64 architecture.

--- a/k8s/email.deployment.yaml
+++ b/k8s/email.deployment.yaml
@@ -21,6 +21,15 @@ spec:
         phase: "%{PHASE}"
         version: "%{VERSION}" 
     spec:
+      affinity:
+        podAntiAffinity:
+          preferredDuringSchedulingIgnoredDuringExecution:
+          - weight: 100
+            podAffinityTerm:
+              labelSelector:
+                matchLabels:
+                  app: email
+              topologyKey: kubernetes.io/hostname
       containers:
       - envFrom:
         - secretRef:
