--- a/k8s/database.deployment.yaml
+++ b/k8s/database.deployment.yaml
@@ -23,6 +23,18 @@ spec:
         phase: "%{PHASE}"
         version: "%{VERSION}" 
     spec:
+      affinity:
+        podAntiAffinity:
+          preferredDuringSchedulingIgnoredDuringExecution:
+          - weight: 100
+            podAffinityTerm:
+              labelSelector:
+                matchExpressions:
+                - key: app
+                  operator: In
+                  values:
+                  - database
+              topologyKey: kubernetes.io/hostname
       containers:
       - envFrom:
         - secretRef:
